<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".DeviceInfo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LayoutInfoDevice"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        android:background="@drawable/white_rectangle_background">
        <TextView
            android:textColor="#000"
            android:id="@+id/infoGene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoGene"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000"
            android:id="@+id/textManuf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textManuf"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/infoGene"
            app:layout_constraintBottom_toTopOf="@id/textProduit"
            app:layout_constraintEnd_toStartOf="@+id/guideInfo"
            app:layout_constraintStart_toStartOf="parent"

            />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000"
            android:id="@+id/infoManuf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nonDispo"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/infoGene"
            app:layout_constraintBottom_toTopOf="@+id/infoProduit"
            app:layout_constraintStart_toEndOf="@+id/guideInfo"
            />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000"
            android:id="@+id/textProduit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textProduit"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textManuf"
            app:layout_constraintEnd_toStartOf="@+id/guideInfo"
            app:layout_constraintBottom_toTopOf="@id/textId"
            app:layout_constraintStart_toStartOf="parent"

            />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000"
            android:id="@+id/infoProduit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nonDispo"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/infoManuf"
            app:layout_constraintBottom_toTopOf="@+id/infoId"
            app:layout_constraintStart_toEndOf="@+id/guideInfo"
            />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000"
            android:id="@+id/textId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textId"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textProduit"
            app:layout_constraintEnd_toStartOf="@+id/guideInfo"
            app:layout_constraintBottom_toTopOf="@id/textNomHard"
            app:layout_constraintStart_toStartOf="parent"

            />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000"
            android:id="@+id/infoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nonDispo"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/infoProduit"
            app:layout_constraintBottom_toTopOf="@+id/infoNomHard"
            app:layout_constraintStart_toEndOf="@+id/guideInfo"
            />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000"
            android:id="@+id/textNomHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textNomHard"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textId"
            app:layout_constraintEnd_toStartOf="@+id/guideInfo"
            app:layout_constraintBottom_toTopOf="@id/textSonnerie"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000"
            android:id="@+id/infoNomHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nonDispo"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/infoId"
            app:layout_constraintBottom_toTopOf="@+id/modeSonnerie"
            app:layout_constraintStart_toEndOf="@+id/guideInfo"
            />
        <TextView
            android:layout_marginTop="40dp"
            android:paddingBottom="20dp"
            android:textColor="#000"
            android:id="@+id/textSonnerie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSonnerie"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textNomHard"
            app:layout_constraintEnd_toStartOf="@+id/guideInfo"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:layout_marginTop="40dp"
            android:paddingBottom="20dp"
            android:textColor="#000"
            android:id="@+id/modeSonnerie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nonDispo"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/infoNomHard"
            app:layout_constraintStart_toStartOf="@id/guideInfo"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_home_24"
        android:padding="5dp"

        android:onClick="backhome"

        android:background="@drawable/button_style_1"


        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@+id/LayoutInfoDevice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>